Test Sandbox Project/src/objects/Agent_Scheduling__c.object
<CustomObject>
    <fields>
        <fullName>AS_01__c</fullName>
        <inlineHelpText>Attendance Status</inlineHelpText>
        <label>AS_01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>On Time</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>UL</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_02__c</fullName>
        <label>AS_02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>On Time</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>UL</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_03__c</fullName>
        <label>AS_03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>On Time</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>UL</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Department__c</fullName>
        <formula>TEXT(Agent__r.Agent_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>Agent__r.FirstName &amp;&apos; &apos;&amp; Agent__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Shift_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Shift 1</label>
        <referenceTo>Agent_Shift__c</referenceTo>
        <relationshipLabel>Agent Schedulings</relationshipLabel>
        <relationshipName>Agent_Schedulings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Shift_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Shift 2</label>
        <referenceTo>Agent_Shift__c</referenceTo>
        <relationshipLabel>Agent Schedulings (Agent Shift 2)</relationshipLabel>
        <relationshipName>Agent_Schedulings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Shift_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Shift 3</label>
        <referenceTo>Agent_Shift__c</referenceTo>
        <relationshipLabel>Agent Schedulings (Agent Shift 3)</relationshipLabel>
        <relationshipName>Agent_Schedulings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Shift_OH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Shift OH</label>
        <referenceTo>Agent_Shift__c</referenceTo>
        <relationshipLabel>Agent Schedulings (Agent Shift OH)</relationshipLabel>
        <relationshipName>Agent_Schedulings4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agent_Schedulings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Break_Shift_01__c</fullName>
        <inlineHelpText>- Break Shift 2 : 13.30 - 14.30
- Break Shift 3.1 : 17.30 - 18.30
- Break Shift 3.2 : 18.30 - 19.30
- Break Shift 4.1 : 01.30 - 02.30
- Break Shift 4.2 : 02.30 - 03.30</inlineHelpText>
        <label>Break_Shift_01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3.1</fullName>
                </value>
                <value>
                    <fullName>3.2</fullName>
                </value>
                <value>
                    <fullName>4.1</fullName>
                </value>
                <value>
                    <fullName>4.2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Break_Shift_02__c</fullName>
        <label>Break_Shift_02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3.1</fullName>
                </value>
                <value>
                    <fullName>3.2</fullName>
                </value>
                <value>
                    <fullName>4.1</fullName>
                </value>
                <value>
                    <fullName>4.2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Break_Shift_03__c</fullName>
        <label>Break_Shift_03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3.1</fullName>
                </value>
                <value>
                    <fullName>3.2</fullName>
                </value>
                <value>
                    <fullName>4.1</fullName>
                </value>
                <value>
                    <fullName>4.2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_01__c</fullName>
        <formula>CASE( MOD( DATE(Year(Document_Date__c), Month(Document_Date__c), 1) - DATE(1900, 1, 7), 7), 0, &quot;Minggu&quot;, 1, &quot;Senin&quot;, 2, &quot;Selasa&quot;, 3,
&quot;Rabu&quot;, 4, &quot;Kamis&quot;, 5, &quot;Jumat&quot;, 6, &quot;Sabtu&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day_01</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_02__c</fullName>
        <formula>CASE( MOD( DATE(Year(Document_Date__c), Month(Document_Date__c), 2) - DATE(1900, 1, 7), 7), 0, &quot;Minggu&quot;, 1, &quot;Senin&quot;, 2, &quot;Selasa&quot;, 3,
&quot;Rabu&quot;, 4, &quot;Kamis&quot;, 5, &quot;Jumat&quot;, 6, &quot;Sabtu&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day_02</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_03__c</fullName>
        <formula>CASE( MOD( DATE(Year(Document_Date__c), Month(Document_Date__c), 3) - DATE(1900, 1, 7), 7), 0, &quot;Minggu&quot;, 1, &quot;Senin&quot;, 2, &quot;Selasa&quot;, 3,
&quot;Rabu&quot;, 4, &quot;Kamis&quot;, 5, &quot;Jumat&quot;, 6, &quot;Sabtu&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day_03</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Name__c</fullName>
        <formula>CASE( MOD( Document_Date__c - DATE(1900, 1, 7), 7), 0, &quot;Minggu&quot;, 1, &quot;Senin&quot;, 2, &quot;Selasa&quot;, 3,
&quot;Rabu&quot;, 4, &quot;Kamis&quot;, 5, &quot;Jumat&quot;, 6, &quot;Sabtu&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>Ext_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Agent__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Day__c</fullName>
        <formula>if ( Month(Document_Date__c) == 12,
&apos;31&apos;,
TEXT(DAY(
DATE(year(Document_Date__c),Month(Document_Date__c)+1,1)-1
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late__c</fullName>
        <formula>IF (ISPICKVAL(AS_01__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_02__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_03__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_04__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_05__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_06__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_07__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_08__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_09__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_10__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_11__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_12__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_13__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_14__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_15__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_16__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_17__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_18__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_19__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_20__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_21__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_22__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_23__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_24__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_25__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_26__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_27__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_28__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_29__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_30__c,&apos;Late&apos;),1,0) +
IF (ISPICKVAL(AS_31__c,&apos;Late&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Time__c</fullName>
        <formula>IF (ISPICKVAL(AS_01__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_02__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_03__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_04__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_05__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_06__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_07__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_08__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_09__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_10__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_11__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_12__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_13__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_14__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_15__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_16__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_17__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_18__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_19__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_20__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_21__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_22__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_23__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_24__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_25__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_26__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_27__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_28__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_29__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_30__c,&apos;On Time&apos;),1,0) +
IF (ISPICKVAL(AS_31__c,&apos;On Time&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Periode_Quarter__c</fullName>
        <formula>TEXT(Year(Document_Date__c))&amp;&apos;-&apos;&amp;
IF ( MONTH(Document_Date__c) == 1, &apos;Q1&apos;,
IF ( MONTH(Document_Date__c) == 2, &apos;Q1&apos;,
IF ( MONTH(Document_Date__c) == 3, &apos;Q1&apos;,
IF ( MONTH(Document_Date__c) == 4, &apos;Q2&apos;,
IF ( MONTH(Document_Date__c) == 5, &apos;Q2&apos;,
IF ( MONTH(Document_Date__c) == 6, &apos;Q2&apos;,
IF ( MONTH(Document_Date__c) == 7, &apos;Q3&apos;,
IF ( MONTH(Document_Date__c) == 8, &apos;Q3&apos;,
IF ( MONTH(Document_Date__c) == 9, &apos;Q3&apos;,
IF ( MONTH(Document_Date__c) == 10, &apos;Q4&apos;,
IF ( MONTH(Document_Date__c) == 11, &apos;Q4&apos;,
IF ( MONTH(Document_Date__c) == 12, &apos;Q4&apos;,&apos;&apos;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periode Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periode__c</fullName>
        <formula>IF ( MONTH(Document_Date__c) == 1, &apos;January&apos;,
IF ( MONTH(Document_Date__c) == 2, &apos;February&apos;,
IF ( MONTH(Document_Date__c) == 3, &apos;March&apos;,
IF ( MONTH(Document_Date__c) == 4, &apos;April&apos;,
IF ( MONTH(Document_Date__c) == 5, &apos;May&apos;,
IF ( MONTH(Document_Date__c) == 6, &apos;June&apos;,
IF ( MONTH(Document_Date__c) == 7, &apos;July&apos;,
IF ( MONTH(Document_Date__c) == 8, &apos;August&apos;,
IF ( MONTH(Document_Date__c) == 9, &apos;September&apos;,
IF ( MONTH(Document_Date__c) == 10, &apos;October&apos;,
IF ( MONTH(Document_Date__c) == 11, &apos;November&apos;,
IF ( MONTH(Document_Date__c) == 12, &apos;December&apos;,&apos;&apos;))))))))))))
&amp;&apos; &apos;&amp;TEXT(Year(Document_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Type__c</fullName>
        <label>Reason Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SS_01__c</fullName>
        <label>SS_01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>UL</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SS_02__c</fullName>
        <label>SS_02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>UL</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SS_03__c</fullName>
        <label>SS_03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>UL</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Shift__c</fullName>
        <label>Schedule Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shift_1__c</fullName>
        <formula>IF (ISPICKVAL(SS_01__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_02__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_03__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_04__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_05__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_06__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_07__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_08__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_09__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_10__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_11__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_12__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_13__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_14__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_15__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_16__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_17__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_18__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_19__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_20__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_21__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_22__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_23__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_24__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_25__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_26__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_27__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_28__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_29__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_30__c,&apos;1&apos;),1,0) +
IF (ISPICKVAL(SS_31__c,&apos;1&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_2__c</fullName>
        <formula>IF (ISPICKVAL(SS_01__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_02__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_03__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_04__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_05__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_06__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_07__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_08__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_09__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_10__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_11__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_12__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_13__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_14__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_15__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_16__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_17__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_18__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_19__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_20__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_21__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_22__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_23__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_24__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_25__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_26__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_27__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_28__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_29__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_30__c,&apos;2&apos;),1,0) +
IF (ISPICKVAL(SS_31__c,&apos;2&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_3__c</fullName>
        <formula>IF (ISPICKVAL(SS_01__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_02__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_03__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_04__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_05__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_06__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_07__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_08__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_09__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_10__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_11__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_12__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_13__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_14__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_15__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_16__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_17__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_18__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_19__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_20__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_21__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_22__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_23__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_24__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_25__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_26__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_27__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_28__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_29__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_30__c,&apos;3&apos;),1,0) +
IF (ISPICKVAL(SS_31__c,&apos;3&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_C__c</fullName>
        <formula>IF (ISPICKVAL(SS_01__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_02__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_03__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_04__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_05__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_06__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_07__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_08__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_09__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_10__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_11__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_12__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_13__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_14__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_15__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_16__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_17__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_18__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_19__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_20__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_21__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_22__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_23__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_24__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_25__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_26__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_27__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_28__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_29__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_30__c,&apos;C&apos;),1,0) +
IF (ISPICKVAL(SS_31__c,&apos;C&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cuti</inlineHelpText>
        <label>Shift C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_OH__c</fullName>
        <formula>IF (ISPICKVAL(SS_01__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_02__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_03__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_04__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_05__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_06__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_07__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_08__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_09__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_10__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_11__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_12__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_13__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_14__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_15__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_16__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_17__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_18__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_19__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_20__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_21__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_22__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_23__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_24__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_25__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_26__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_27__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_28__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_29__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_30__c,&apos;OH&apos;),1,0) +
IF (ISPICKVAL(SS_31__c,&apos;OH&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift OH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_S__c</fullName>
        <formula>IF (ISPICKVAL(SS_01__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_02__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_03__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_04__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_05__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_06__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_07__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_08__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_09__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_10__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_11__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_12__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_13__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_14__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_15__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_16__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_17__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_18__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_19__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_20__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_21__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_22__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_23__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_24__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_25__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_26__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_27__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_28__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_29__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_30__c,&apos;S&apos;),1,0) +
IF (ISPICKVAL(SS_31__c,&apos;S&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sick</inlineHelpText>
        <label>Shift S</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_UL__c</fullName>
        <formula>IF (ISPICKVAL(SS_01__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_02__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_03__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_04__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_05__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_06__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_07__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_08__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_09__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_10__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_11__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_12__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_13__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_14__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_15__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_16__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_17__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_18__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_19__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_20__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_21__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_22__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_23__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_24__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_25__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_26__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_27__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_28__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_29__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_30__c,&apos;UL&apos;),1,0) +
IF (ISPICKVAL(SS_31__c,&apos;UL&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift UL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_X__c</fullName>
        <formula>IF (ISPICKVAL(SS_01__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_02__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_03__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_04__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_05__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_06__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_07__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_08__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_09__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_10__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_11__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_12__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_13__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_14__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_15__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_16__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_17__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_18__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_19__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_20__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_21__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_22__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_23__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_24__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_25__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_26__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_27__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_28__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_29__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_30__c,&apos;X&apos;),1,0) +
IF (ISPICKVAL(SS_31__c,&apos;X&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Agent__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <description>backup DATE(1985,6,24)</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agent Scheduling</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agent__c</columns>
        <columns>Agent_Department__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Gender__c</columns>
        <columns>Last_Day__c</columns>
        <columns>Periode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000000}</displayFormat>
        <label>Agent Scheduling No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Schedulings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validation_Day_29</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(SS_29__c) != &apos;&apos; &amp;&amp; Last_Day__c == &apos;28&apos;</errorConditionFormula>
        <errorDisplayField>SS_29__c</errorDisplayField>
        <errorMessage>Must Blank</errorMessage>
    </validationRules>
</CustomObject>